--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -30,15 +30,43 @@ section {
 }
 
 .section-title {
+    padding-top: 50px;
     margin-bottom: 50px;
+    margin-left: 15px;
     text-align: left;
 }
 
 .cbody{
     text-align: left;
-    margin-left: 20px;
-    padding-bottom:50px;
+    margin-left: 40px;
+    padding-bottom:75px;
 }
 .row{
-    background:#eee;
+    background:#fff;
+}
+#con img{
+    pointer-events: none;
+    position:absolute;
+    left:0;
+    -webkit-transition: opacity .5s ease-in-out;
+    -moz-transition: opacity .5s ease-in-out;
+    -o-transition: opacity .5s ease-in-out;
+    transition: opacity .5s ease-in-out;
+    opacity:0;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+}
+#con img.opaque {
+    opacity:1;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=1);
+    
+}
+#con {
+    z-index: -1;
+    display: inline-block;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height:100%;
 }
