remove blur effect, fix styling

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -49,6 +49,9 @@ section {
     color: #777;
     font-size: 14pt;
 }
+.post{
+	padding-top: 50px;
+}
 .row{
     background:#fff;
 }
@@ -67,11 +70,11 @@ section {
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
  
-    -webkit-filter: blur(25px);
+    /*-webkit-filter: blur(25px);
     -moz-filter: blur(15px);
     -o-filter: blur(15px);
     -ms-filter: blur(15px);
-    filter: blur(15px);
+    filter: blur(15px);*/
 }
 #con img.opaque {
     opacity:1;
